[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server for handling callbacks from an HbbTV payload."
authors = ["Marc Steele <steelegbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
